# AutoPTU

./: .editorconfig  .gitattributes  .gitignore  .tmp_trainer_coverage.json  .tmp_trainer_coverage.md  ABILITY_HOOKS.md  ABILITY_LOG.md  AGENTS.md  ARCHITECTURE_OUT_OF_COMBAT.md  ARCHITECTURE_POLICY.md  ATTACK_LOG.md  AUDIT_CHECKLIST.md  AUDIT_PARITY_REPORT.md  AUDIT_PROGRESS.md  AUDIT_REPORT.md  AUDIT_SOURCES_INDEX.md  AUDIT_UI.md  AutoPTU.spec  AutoPTUCharacterBuilder.spec  AutoPTUMoveConverter.spec  AutoPTUWeb.spec  BATTLE_ENGINE_DESIGN.md  CHANGELOG.md  CONTRACTS.md  CONTRIBUTING.md  DOCS_INDEX.md  ENGINE_PLAN.md  IMPLEMENTATION_STATUS.md  ITEM_LOG.md  PHASE_COVERAGE.md  README.md  README_UI.md  ROADMAP.md  RULES_CONFORMANCE.md  TASK.md  TRAINER_CLASS_CATALOG.md  TRAINER_CLASS_TREES.md  TRAINER_CLASS_VALIDATION.md  _ability_check.py  _ability_lookup.py  (+21 more)
Generation 9 Pack v3.3.4/: Credits.txt
Teams/: AGap team.csv  Base PTU OP team.csv  OurosPTU team.csv
audit_sources/: Arceus References.txt  Blessed and the Damned.txt  Do Porygon Dream of Mareep.txt  GalarDex + Armor_Crown.txt  Game of Throhs.txt  HisuiDex.txt  Indices and Reference.txt  Making_Fixing PTU Pokemon.txt  PTU 1.05 Pokemon Sheet.txt  PTU 1.05 Trainer Sheet.txt  PTU May 2015 Playtest Packet.txt  PTU September 2015 Playtest Packet.txt  Pokedex 1.05.txt  Pokemon Tabletop United 1.05 Core.txt  SuMo References.txt  SwSh + Armor_Crown References.txt  Useful Charts.txt  content.txt
auto_ptu/: __init__.py  ai_battles.py  battle_state.py  cli.py  config.py  csv_repository.py  data_loader.py  data_models.py  (+19 more)
(+9433 files in other folders)
